@@ -3,12 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.cloudhoist</groupId>
-    <artifactId>pallet-pom</artifactId>
-    <version>0.4.5</version>
+    <artifactId>parent-pom</artifactId>
+    <version>0.1.3</version>
+    <relativePath />
   </parent>
   <groupId>org.cloudhoist</groupId>
   <artifactId>script-exec</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>script-exec</name>
   <description>
@@ -18,97 +19,24 @@
   <inceptionYear>2010</inceptionYear>
 
   <scm>
-    <connection>scm:git:git://github.com/palletops/script-exec.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/palletops/script-exec.git</developerConnection>
+    <connection>scm:git:git://github.com/pallet/script-exec.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/pallet/script-exec.git</developerConnection>
     <url>http://github.com/palletops/script-exec</url>
   </scm>
 
   <build>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-      </resource>
-      <resource>
-        <directory>resources</directory>
-        <excludes>
-          <exclude>filtered/*</exclude>
-        </excludes>
-      </resource>
-      <resource>
-        <directory>resources/filtered</directory>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
     <testResources>
-      <testResource>
-        <directory>test</directory>
-      </testResource>
       <testResource>
         <directory>test-resources</directory>
       </testResource>
     </testResources>
     <plugins>
       <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>test-jar</id>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <excludes>
-            <exclude>log4j.xml</exclude>
-            <exclude>logback.xml</exclude>
-            <exclude>logback-test.xml</exclude>
-          </excludes>
-        </configuration>
+        <groupId>org.cloudhoist.plugin</groupId>
+        <artifactId>zi</artifactId>
       </plugin>
-      <plugin>
-        <groupId>com.theoryinpractise</groupId>
-        <artifactId>clojure-maven-plugin</artifactId>
-        <configuration>
-          <autodocTargetDirectory>autodoc/autodoc</autodocTargetDirectory>
-          <marginaliaTargetDirectory>autodoc/marginalia</marginaliaTargetDirectory>
-        </configuration>
-        <executions>
-          <execution>
-            <id>compile-clojure</id>
-            <phase>compile</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>test-clojure</id>
-            <phase>test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-        <plugin>
-          <groupId>org.cloudhoist.plugin</groupId>
-          <artifactId>zi</artifactId>
-          <version>${zi.version}</version>
-          <dependencies>
-            <dependency>
-              <groupId>org.clojure</groupId>
-              <artifactId>clojure</artifactId>
-              <version>${clojure.version}</version>
-            </dependency>
-            <dependency>
-              <groupId>ritz</groupId>
-              <artifactId>ritz</artifactId>
-              <version>${ritz.version}</version>
-            </dependency>
-          </dependencies>
-        </plugin>
     </plugins>
   </build>
 
@@ -116,15 +44,7 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.clojure</groupId>
-      <artifactId>clojure-contrib</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.clojure</groupId>
-      <artifactId>core.incubator</artifactId>
-      <version>0.1.0</version>
+      <version>1.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
@@ -132,83 +52,33 @@
       <version>0.1.2</version>
     </dependency>
     <dependency>
-      <groupId>org.clojure</groupId>
-      <artifactId>tools.namespace</artifactId>
-      <version>0.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cloudhoist</groupId>
-      <artifactId>thread-expr</artifactId>
-      <version>1.0.0</version>
+      <groupId>slingshot</groupId>
+      <artifactId>slingshot</artifactId>
+      <version>0.10.3</version>
     </dependency>
     <dependency>
       <groupId>org.cloudhoist</groupId>
       <artifactId>pallet-common</artifactId>
-      <version>0.2.2-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>org.cloudhoist</groupId>
-      <artifactId>stevedore</artifactId>
-      <version>0.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
-      <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>clj-ssh</groupId>
-      <artifactId>clj-ssh</artifactId>
       <version>0.3.0</version>
     </dependency>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.6.1</version>
-      <optional>true</optional>
+      <groupId>org.cloudhoist</groupId>
+      <artifactId>ssh-transport</artifactId>
+      <version>0.2.0</version>
     </dependency>
     <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <version>0.9.29</version>
-      <optional>true</optional>
-      <scope>test</scope>
+      <groupId>org.cloudhoist</groupId>
+      <artifactId>local-transport</artifactId>
+      <version>0.2.0</version>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>0.9.29</version>
+      <version>1.0.1</version>
       <optional>true</optional>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>autodoc</groupId>
-      <artifactId>autodoc</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>marginalia</groupId>
-      <artifactId>marginalia</artifactId>
-      <optional>true</optional>
-    </dependency>
   </dependencies>
-
-  <profiles>
-    <profile>
-      <id>testuser</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.theoryinpractise</groupId>
-            <artifactId>clojure-maven-plugin</artifactId>
-            <configuration>
-              <clojureOptions>-Xmx512m -Djava.awt.headless=true -XX:MaxPermSize=256m -Dssh.username=testuser</clojureOptions>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
 
   <developers>
     <developer>
@@ -222,31 +92,5 @@
       <timezone>-5</timezone>
     </developer>
   </developers>
-
-
-  <!-- make sure we can find the parent pom -->
-  <repositories>
-    <repository>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>sonatype-nexus-releases</id>
-      <name>Sonatype Nexus Releases</name>
-      <url>http://oss.sonatype.org/content/repositories/releases</url>
-    </repository>
-    <repository>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Sonatype Nexus Snapshots</name>
-      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-    </repository>
-  </repositories>
-
-  <properties>
-    <zi.version>0.4.1</zi.version>
-    <ritz.version>0.2.1-SNAPSHOT</ritz.version>
-  </properties>
 
 </project>
